--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "format": "prettier --loglevel warn --write \"{<file-path>}/**/*.{json,js,ts}\"",
+    "lint": "next lint",
+    "start": "next start"
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.2.0",
@@ -23,6 +24,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
+    "prettier": "3.0.3",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
