--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "format": "prettier --log-level warn --write \"*.{json,js,ts}\"",
+    "format": "prettier --log-level warn --write .",
     "lint": "next lint",
     "start": "next start"
   },
