--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Install dependencies
       run: npm install
     - name: Format Check
-      run: npm run format:check || echo "Error::Please run 'npm run format' and commit again." && exit 1
+      run: npm run format:check || echo "Error::Please run 'npm run format' and commit again."
