--- a/package.json
+++ b/package.json
@@ -47,6 +47,6 @@
     "postcss": "^8",
     "prettier": "3.0.3",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "~5.0.4"
   }
 }
