--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,3 +27,6 @@ jobs:
     - name: Format Check
       # When fails, please run "npm run format" to your code
       run: npm run format:check
+    - name: Lint Check
+      # When fails, please run "npm run lint" to your code
+      run: npm run lint:check
