--- a/templates/buy-me-a-coffee-app/.gitignore
+++ b/templates/buy-me-a-coffee-app/.gitignore
@@ -2,8 +2,6 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
@@ -26,6 +24,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
