--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint:check": "nx run-many --target=lint:check --all"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.8",
+    "@changesets/cli": "^2.26.2",
     "nx": "17.0.3"
   }
 }
