--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "private": true,
-  "name": "build-onchain-apps",
+  "name": "@base-org/build-onchain-apps",
+  "version": "0.0.1",
   "repository": "https://github.com/base-org/build-onchain-apps.git",
   "workspaces": [
     "templates/*",
