--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
     "nx": "17.0.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
