--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "release:publish": "yarn install && yarn build && changeset publish",
     "release:version": "changeset version && yarn install --lockfile-only"
   },
+  "dependencies": {
+    "@base-org/build-onchain-apps": "^0.0.3"
+  },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
