--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -11,13 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^11.1.0",
-    "figlet": "^1.7.0"
+    "figlet": "^1.7.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@types/figlet": "^1.5.8",
     "@types/node": "^20.9.0",
     "typescript": "^5.2.2"
+  },
   "type": "commonjs",
   "main": "./src/index.js",
   "typings": "./src/index.d.ts",
