--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@testing-library/react": "14.0.0",
+    "@types/figlet": "^1.5.8",
     "@types/inquirer": "^8.2.5",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
