--- a/templates/buy-me-a-coffee-app/package.json
+++ b/templates/buy-me-a-coffee-app/package.json
@@ -12,10 +12,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/themes": "^2.0.1",
     "@rainbow-me/rainbowkit": "^1.2.0",
     "next": "13.5.6",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "scroll-into-view-if-needed": "^3.1.0",
     "wagmi": "^1.4.5"
   },
   "devDependencies": {
