Enable npm provenance

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -2,15 +2,15 @@ name: Setup
 runs:
   using: composite
   steps:
-    - uses: pnpm/action-setup@v2
-      with:
-        version: 8.6.0
-
     - uses: actions/setup-node@v3
       with:
         node-version-file: ".nvmrc"
         registry-url: https://registry.npmjs.org
         cache: yarn
+
+    # For provenance https://docs.npmjs.com/generating-provenance-statements#prerequisites
+    - name: Install npm 9.5
+      run: npm install -g npm@^9.5.0
 
     - name: Install Foundry
       uses: foundry-rs/foundry-toolchain@v1
