--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "verdaccio": "^5.0.4"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   },
   "nx": {
     "includedScripts": []
