--- a/templates/buy-me-a-coffee-app/tsconfig.json
+++ b/templates/buy-me-a-coffee-app/tsconfig.json
@@ -27,7 +27,7 @@
       "@hooks/*": [
         "./src/hooks/*"
       ],
-      "@/utils/*": [
+      "@utils/*": [
         "./src/utils/*"
       ]
     }
