feat: add UI in template buy me a coffee #7 (#47)

--- a/templates/buy-me-a-coffee-app/tsconfig.json
+++ b/templates/buy-me-a-coffee-app/tsconfig.json
@@ -20,6 +20,15 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@components/*": [
+        "./src/components/*"
+      ],
+      "@hooks/*": [
+        "./src/hooks/*"
+      ],
+      "@utils/*": [
+        "./src/utils/*"
       ]
     }
   },
