--- a/templates/buy-me-a-coffee-app/package.json
+++ b/templates/buy-me-a-coffee-app/package.json
@@ -12,13 +12,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-context": "^1.0.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/themes": "^2.0.1",
     "@rainbow-me/rainbowkit": "^1.2.0",
     "next": "13.5.6",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-remove-scroll": "^2.5.7",
+    "scroll-into-view-if-needed": "^3.1.0",
+    "viem": "^1.2.13",
     "wagmi": "^1.4.5"
   },
   "devDependencies": {
+    "@types/minipass": "^3.3.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
