--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -4,13 +4,14 @@ runs:
   steps:
     - uses: actions/setup-node@v3
       with:
-        node-version-file: ".nvmrc"
+        node-version-file: '.nvmrc'
         registry-url: https://registry.npmjs.org
         cache: yarn
 
     # For provenance https://docs.npmjs.com/generating-provenance-statements#prerequisites
     - name: Install npm 9.5
       run: npm install -g npm@^9.5.0
+      shell: bash
 
     - name: Install Foundry
       uses: foundry-rs/foundry-toolchain@v1
