--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "repository": "https://github.com/base-org/build-onchain-apps.git",
   "license": "Apache-2.0",
   "dependencies": {
-    "chalk": "^4.1.2",
-    "commander": "^11.1.0",
-    "got": "^11.8.5",
-    "figlet": "^1.7.0",
-    "inquirer": "^8.2.5",
-    "rimraf": "^5.0.5",
-    "tar": "4.4.18",
-    "tslib": "^2.3.0",
     "@nx/devkit": "^17.1.2",
     "@nx/js": "^17.1.2",
-    "nx": "^17.1.2"
+    "chalk": "^4.1.2",
+    "commander": "^11.1.0",
+    "figlet": "^1.7.0",
+    "got": "^11.8.5",
+    "inquirer": "^8.2.5",
+    "nx": "^17.1.2",
+    "rimraf": "^5.0.5",
+    "tar": "4.4.18",
+    "tslib": "^2.3.0"
   },
   "scripts": {
     "build": "nx build",
@@ -32,7 +32,6 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
-    "verdaccio": "^5.27.0",
     "@nx/eslint": "17.1.2",
     "@nx/eslint-plugin": "17.1.2",
     "@nx/vite": "17.1.2",
@@ -50,6 +49,7 @@
     "eslint-config-prettier": "^9.0.0",
     "prettier": "^2.6.2",
     "typescript": "~5.2.2",
+    "verdaccio": "^5.27.0",
     "vite": "~4.3.9",
     "vitest": "~0.32.0"
   },
