--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,6 @@ jobs:
       - name: Lint Check
         # When fails, please run "npm run lint" to your code
         run: npm run lint
-      - name: Format Check
-        # When fails, please run "npm run format" to your code
-        run: npm run format:check --base=main --head=HEAD
+      # - name: Format Check
+      #   # When fails, please run "npm run format" to your code
+      #   run: npm run format:check --base=main --head=HEAD
