--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
   "name": "@base-org/build-onchain-apps",
   "version": "0.1.0",
   "repository": "https://github.com/base-org/build-onchain-apps.git",
+  "license": "Apache-2.0",
   "dependencies": {
+    "@nx/devkit": "^17.1.2",
+    "@nx/js": "^17.1.2",
     "chalk": "^4.1.2",
     "commander": "^11.1.0",
-    "got": "^11.8.5",
     "figlet": "^1.7.0",
+    "got": "^11.8.5",
     "inquirer": "^8.2.5",
+    "nx": "^17.1.2",
     "rimraf": "^5.0.5",
     "tar": "4.4.18",
     "tslib": "^2.3.0"
   },
   "scripts": {
-    "build": "echo 'Coming soon'",
-    "format": "nx run-many --target=format --all",
-    "format:check": "nx run-many --target=format:check --all",
-    "lint": "nx run-many --target=lint --all",
-    "lint:check": "nx run-many --target=lint:check --all",
+    "build": "nx build",
+    "test": "nx test",
+    "format": "nx format",
+    "format:check": "nx format:check",
+    "lint": "nx lint",
+    "local:start-registry": "nx local-registry",
+    "local:publish": "nx publish @base-org/build-onchain-apps",
     "release:check": "changeset status --verbose --since=origin/main",
     "release:publish": "yarn install && yarn build && changeset publish",
     "release:version": "changeset version && yarn install --lockfile-only"
@@ -25,45 +31,26 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
-    "@nx/cypress": "17.1.2",
     "@nx/eslint": "17.1.2",
     "@nx/eslint-plugin": "17.1.2",
-    "@nx/jest": "17.1.2",
-    "@nx/js": "17.1.2",
-    "@nx/next": "^17.1.2",
-    "@nx/react": "17.1.2",
+    "@nx/vite": "17.1.2",
     "@nx/workspace": "17.1.2",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
-    "@testing-library/react": "14.0.0",
-    "@types/figlet": "^1.5.8",
     "@types/inquirer": "^8.2.5",
-    "@types/jest": "^29.4.0",
-    "@types/node": "18.14.2",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
+    "@types/node": "18.7.1",
     "@types/tar": "4.0.3",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
-    "babel-jest": "^29.4.1",
-    "cypress": "^13.0.0",
+    "@vitest/coverage-v8": "~0.32.0",
+    "@vitest/ui": "~0.32.0",
     "eslint": "~8.46.0",
-    "eslint-config-next": "13.4.1",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-cypress": "^2.13.4",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "jest-environment-node": "^29.4.1",
-    "nx": "17.1.2",
     "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
     "typescript": "~5.2.2",
-    "verdaccio": "^5.0.4"
+    "verdaccio": "^5.27.0",
+    "vite": "~4.3.9",
+    "vitest": "~0.32.0"
   },
   "publishConfig": {
     "access": "public",
@@ -71,5 +58,11 @@
   },
   "nx": {
     "includedScripts": []
+  },
+  "type": "commonjs",
+  "main": "./src/index.js",
+  "typings": "./src/index.d.ts",
+  "bin": {
+    "build-onchain-apps": "./src/index.js"
   }
 }
