--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/themes": "^2.0.1",
+    "@rainbow-me/rainbowkit": "^1.3.0",
     "next": "13.5.6",
     "next-themes": "^0.2.1",
     "react": "^18",
