--- a/apps/build-onchain-apps/tsconfig.json
+++ b/apps/build-onchain-apps/tsconfig.json
@@ -36,7 +36,8 @@
     "custom.d.ts",
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "src/pwa/cache.js"
   ],
   "exclude": [
     "node_modules"
