--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@build-onchain-apps/buy-me-a-coffee-app",
+  "name": "@build-onchain-apps/docs",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -19,6 +19,7 @@
     "@radix-ui/themes": "^2.0.1",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "next": "13.5.6",
+    "next-pwa": "5.6.0",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
