feat: Added support for PWA (#90) #8

--- a/apps/build-onchain-apps/tsconfig.json
+++ b/apps/build-onchain-apps/tsconfig.json
@@ -36,7 +36,7 @@
     "custom.d.ts",
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
   ],
   "exclude": [
     "node_modules"
