--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@build-onchain-apps/buy-me-a-coffee-app",
+  "name": "@build-onchain-apps/docs",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -19,13 +19,15 @@
     "@radix-ui/themes": "^2.0.1",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "next": "13.5.6",
+    "next-pwa": "5.6.0",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-remove-scroll": "^2.5.7",
     "scroll-into-view-if-needed": "^3.1.0",
     "viem": "^1.19.7",
-    "wagmi": "^1.4.5"
+    "wagmi": "^1.4.5",
+    "workbox-webpack-plugin": "^7.0.0"
   },
   "devDependencies": {
     "@types/minipass": "^3.3.5",
