--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -22,6 +22,7 @@
     "next": "13.5.6",
     "next-pwa": "5.6.0",
     "next-themes": "^0.2.1",
+    "perfume.js": "9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-remove-scroll": "^2.5.7",
