--- a/apps/build-onchain-apps/contracts/foundry.toml
+++ b/apps/build-onchain-apps/contracts/foundry.toml
@@ -2,5 +2,12 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+fs_permissions = [{ access = "read", path = "./"}]
+
+[rpc_endpoints]
+base_goerli="${BASE_GOERLI_RPC_URL}"
+
+[etherscan]
+base_goerli={key="${BASESCAN_API_KEY}"}
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
