update .env to more general names

--- a/apps/build-onchain-apps/contracts/.env.example
+++ b/apps/build-onchain-apps/contracts/.env.example
@@ -1,2 +1,3 @@
 PRIVATE_KEY=
-BASESCAN_API_KEY="PLACEHOLDER_STRING_BASE_GOERLI_DOESNT_REQUIRE_API_KEY"
+BLOCK_EXPLORER_API_KEY="PLACEHOLDER_STRING_BASE_GOERLI_DOESNT_REQUIRE_API_KEY"
+RPC_URl="https://goerli.base.org"
