add network to .env

--- a/apps/build-onchain-apps/contracts/foundry.toml
+++ b/apps/build-onchain-apps/contracts/foundry.toml
@@ -5,9 +5,9 @@ libs = ["lib"]
 fs_permissions = [{ access = "read", path = "./"}]
 
 [rpc_endpoints]
-base_goerli="${RPC_URl}"
+"${NETWORK}"="${RPC_URl}"
 
 [etherscan]
-base_goerli={key="${BLOCK_EXPLORER_API_KEY}"}
+"${NETWORK}"={key="${BLOCK_EXPLORER_API_KEY}"}
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
