--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "local:publish": "nx publish @coinbase/build-onchain-apps",
     "release:check": "changeset status --verbose --since=origin/main",
     "release:publish": "yarn install && yarn build && changeset publish",
-    "release:version": "changeset version && yarn install --lockfile-only"
+    "release:version": "changeset version && yarn install --immutable"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
