--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -9,7 +9,8 @@
     "format:check": "prettier --check .",
     "lint": "next lint --fix",
     "lint:check": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "test": "yarn jest . --coverage"
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.7.2",
@@ -32,6 +33,7 @@
     "workbox-webpack-plugin": "^7.0.0"
   },
   "devDependencies": {
+    "@jest/types": "^29.6.3",
     "@types/minipass": "^3.3.5",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -59,6 +61,7 @@
     "eslint-plugin-react-perf": "^3.3.1",
     "eslint-plugin-relay": "^1.8.3",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "prettier": "3.0.3",
     "tailwindcss": "^3",
