--- a/apps/build-onchain-apps/tsconfig.json
+++ b/apps/build-onchain-apps/tsconfig.json
@@ -36,9 +36,9 @@
     "custom.d.ts",
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
   ]
 }
