--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint --fix",
     "lint:check": "next lint",
     "start": "next start",
-    "test": "yarn jest . --coverage"
+    "test": "yarn jest .",
+    "test:coverage": "yarn jest . --coverage; open coverage/lcov-report/index.html"
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.7.2",
@@ -33,7 +34,9 @@
     "workbox-webpack-plugin": "^7.0.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.23.3",
     "@jest/types": "^29.6.3",
+    "@testing-library/jest-dom": "^6.1.5",
     "@types/minipass": "^3.3.5",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -44,6 +47,7 @@
     "@typescript-eslint/types": "^5.54.1",
     "@typescript-eslint/utils": "^5.54.1",
     "autoprefixer": "^10",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.27.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
@@ -62,9 +66,12 @@
     "eslint-plugin-relay": "^1.8.3",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-extended": "^4.0.2",
     "postcss": "^8",
     "prettier": "3.0.3",
     "tailwindcss": "^3",
+    "ts-jest": "^29.1.1",
     "typescript": "~5.0.4"
   },
   "packageManager": "yarn@4.0.2"
