--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -37,6 +37,7 @@
     "@babel/preset-react": "^7.23.3",
     "@jest/types": "^29.6.3",
     "@testing-library/jest-dom": "^6.1.5",
+    "@types/jest": "^29.5.10",
     "@types/minipass": "^3.3.5",
     "@types/node": "^20",
     "@types/react": "^18",
