--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "apps/build-onchain-apps/contracts/lib/forge-std"]
 	path = apps/build-onchain-apps/contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "apps/build-onchain-apps/contracts/lib/openzeppelin-contracts"]
+	path = apps/build-onchain-apps/contracts/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
