--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.23.3",
+    "@jest/globals": "^29.7.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@types/jest": "^29.5.10",
     "@types/minipass": "^3.3.5",
