Easier intructions and setup

--- a/apps/build-onchain-apps/contracts/.env.example
+++ b/apps/build-onchain-apps/contracts/.env.example
@@ -1,4 +1,4 @@
 PRIVATE_KEY=
 BLOCK_EXPLORER_API_KEY="PLACEHOLDER_STRING_BASE_GOERLI_DOESNT_REQUIRE_API_KEY"
-RPC_URl="https://goerli.base.org"
+RPC_URL="https://goerli.base.org"
 NETWORK="base_goerli"
