--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -11,7 +11,8 @@
     "lint:check": "next lint",
     "start": "next start",
     "test": "jest .",
-    "test:coverage": "jest . --coverage"
+    "test:coverage": "jest . --coverage",
+    "test:coverage:open": "yarn test:coverage && open coverage/lcov-report/index.html"
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.7.2",
@@ -34,9 +35,12 @@
     "workbox-webpack-plugin": "^7.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.5",
     "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@jest/globals": "^29.7.0",
     "@testing-library/jest-dom": "^6.1.5",
+    "@types/babel__preset-env": "^7",
     "@types/jest": "^29.5.10",
     "@types/minipass": "^3.3.5",
     "@types/node": "^20",
