--- a/.github/workflows/app.js.yml
+++ b/.github/workflows/app.js.yml
@@ -2,7 +2,7 @@
 # cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: CLI
 on:
   push:
     branches: ['main']
@@ -22,11 +22,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - name: CLI Install dependencies
-        run: npm install
-      - name: CLI Lint Check
-        # When fails, please run "npm run lint" to your code
-        run: npm run lint
       - name: App Install dependencies
         working-directory: ./apps/build-onchain-apps
         run: npm install
