--- a/.github/workflows/app.js.yml
+++ b/.github/workflows/app.js.yml
@@ -2,7 +2,7 @@
 # cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: CLI
+name: App
 on:
   push:
     branches: ['main']
