fix: lint error

--- a/project.json
+++ b/project.json
@@ -20,7 +20,8 @@
       "options": {
         "lintFilePatterns": [
           "./src/**/*.ts",
-          "./package.json"
+          "./package.json",
+          "./scripts/**/*.ts"
         ]
       }
     },
