--- a/.github/workflows/app.js.yml
+++ b/.github/workflows/app.js.yml
@@ -37,3 +37,5 @@ jobs:
         working-directory: ./apps/build-onchain-apps
         # When fails, please check your tests
         run: npm run build
+        env:
+          NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID: build_test
