--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -31,7 +31,7 @@
     "react-remove-scroll": "^2.5.7",
     "scroll-into-view-if-needed": "^3.1.0",
     "viem": "^1.19.7",
-    "wagmi": "^1.4.5",
+    "wagmi": "^1.4.10",
     "workbox-webpack-plugin": "^7.0.0"
   },
   "devDependencies": {
@@ -51,6 +51,7 @@
     "@typescript-eslint/type-utils": "^5.54.1",
     "@typescript-eslint/types": "^5.54.1",
     "@typescript-eslint/utils": "^5.54.1",
+    "abitype": "^0.10.3",
     "autoprefixer": "^10.4.16",
     "babel-jest": "^29.7.0",
     "eslint": "^8.27.0",
@@ -77,7 +78,7 @@
     "prettier": "3.0.3",
     "tailwindcss": "^3.3.6",
     "ts-jest": "^29.1.1",
-    "typescript": "~5.0.4"
+    "typescript": "~5.3.3"
   },
   "packageManager": "yarn@4.0.2"
 }
