--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -22,10 +22,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/themes": "^2.0.1",
     "@rainbow-me/rainbowkit": "^1.3.0",
-    "client-analytics": "0.0.1",
     "next": "13.5.6",
     "next-pwa": "5.6.0",
     "next-themes": "^0.2.1",
+    "perfume.js": "9.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-remove-scroll": "^2.5.7",
