--- a/project.json
+++ b/project.json
@@ -4,25 +4,11 @@
   "sourceRoot": "src",
   "projectType": "library",
   "targets": {
-    "build": {
-      "executor": "@nx/js:tsc",
-      "outputs": ["{options.outputPath}"],
-      "options": {
-        "outputPath": "dist",
-        "main": "./src/index.ts",
-        "tsConfig": "./tsconfig.lib.json",
-        "assets": ["*.md"]
-      }
-    },
     "lint": {
       "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "./src/**/*.ts",
-          "./package.json",
-          "./scripts/*.ts"
-        ]
+        "lintFilePatterns": ["./src/**/*.ts", "./package.json"]
       }
     },
     "test": {
@@ -31,18 +17,6 @@
       "options": {
         "passWithNoTests": true,
         "reportsDirectory": "coverage/@coinbase/build-onchain-apps"
-      }
-    },
-    "publish": {
-      "command": "node scripts/publish.mjs @coinbase/build-onchain-apps {args.ver} {args.tag}",
-      "dependsOn": ["build"]
-    },
-    "local-registry": {
-      "executor": "@nx/js:verdaccio",
-      "options": {
-        "port": 4873,
-        "config": ".verdaccio/config.yml",
-        "storage": "tmp/local-registry/storage"
       }
     }
   },
