--- a/apps/build-onchain-apps/tsconfig.json
+++ b/apps/build-onchain-apps/tsconfig.json
@@ -16,21 +16,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true,
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "@components/*": [
-        "./src/components/*"
-      ],
-      "@hooks/*": [
-        "./src/hooks/*"
-      ],
-      "@utils/*": [
-        "./src/utils/*"
-      ]
-    }
+    "incremental": true
   },
   "include": [
     "custom.d.ts",
