--- a/apps/build-onchain-apps/contracts/foundry.toml
+++ b/apps/build-onchain-apps/contracts/foundry.toml
@@ -2,5 +2,12 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+fs_permissions = [{ access = "read", path = "./"}]
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[rpc_endpoints]
+"${NETWORK}"="${RPC_URl}"
+
+[etherscan]
+"${NETWORK}"={key="${BLOCK_EXPLORER_API_KEY}"}
+
+# See more config options https://github.com/foundry-rs/foundry/tree/master/config
