--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -77,6 +77,9 @@
     "jest-extended": "^4.0.2",
     "postcss": "^8.4.32",
     "prettier": "3.0.3",
+    "stylelint": "^16.0.2",
+    "stylelint-config-standard": "^35.0.0",
+    "stylelint-order": "^6.0.4",
     "tailwindcss": "^3.3.6",
     "ts-jest": "^29.1.1",
     "typescript": "~5.3.3"
