--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -21,7 +21,7 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/themes": "^2.0.1",
-    "@rainbow-me/rainbowkit": "^1.3.0",
+    "@rainbow-me/rainbowkit": "1.3.1",
     "next": "13.5.6",
     "next-pwa": "5.6.0",
     "next-themes": "^0.2.1",
@@ -30,8 +30,8 @@
     "react-dom": "^18",
     "react-remove-scroll": "^2.5.7",
     "scroll-into-view-if-needed": "^3.1.0",
-    "viem": "^1.19.7",
-    "wagmi": "^1.4.10",
+    "viem": "1.19.15",
+    "wagmi": "1.4.12",
     "workbox-webpack-plugin": "^7.0.0"
   },
   "devDependencies": {
