--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -42,6 +42,7 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@types/babel__preset-env": "^7",
+    "@types/identity-obj-proxy": "^3",
     "@types/jest": "^29.5.10",
     "@types/minipass": "^3.3.5",
     "@types/node": "^20",
@@ -72,6 +73,7 @@
     "eslint-plugin-react-perf": "^3.3.1",
     "eslint-plugin-relay": "^1.8.3",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-extended": "^4.0.2",
