--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -15,6 +15,7 @@
     "test:coverage:open": "yarn test:coverage && open coverage/lcov-report/index.html"
   },
   "dependencies": {
+    "@coinbase/onchainkit": "^0.1.0",
     "@coinbase/wallet-sdk": "^3.7.2",
     "@radix-ui/react-context": "^1.0.1",
     "@radix-ui/react-icons": "^1.3.0",
