--- a/apps/build-onchain-apps/.gitmodules
+++ b/apps/build-onchain-apps/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "contracts/lib/forge-std"]
-	path = apps/build-onchain-apps/contracts/lib/forge-std
+	path =contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
 [submodule contracts/lib/openzeppelin-contracts"]
-	path = apps/build-onchain-apps/contracts/lib/openzeppelin-contracts
+	path = contracts/lib/openzeppelin-contracts
 	url = https://github.com/openzeppelin/openzeppelin-contracts
