--- a/.github/workflows/foundry.yml
+++ b/.github/workflows/foundry.yml
@@ -1,15 +1,16 @@
-name: test
 
-on: workflow_dispatch
-
+name: Foundry
+on:
+  push:
+    branches: ['main']
+  pull_request:
+    branches: ['main']
 env:
   FOUNDRY_PROFILE: ci
-
 jobs:
   check:
     strategy:
       fail-fast: true
-
     name: Foundry project
     runs-on: ubuntu-latest
     steps:
