--- a/.github/workflows/app-lint.js.yml
+++ b/.github/workflows/app-lint.js.yml
@@ -1,4 +1,4 @@
-name: App Build
+name: App Lint & Test
 on:
   push:
     branches: ['main']
@@ -21,9 +21,11 @@ jobs:
       - name: App Install dependencies
         working-directory: ./apps/build-onchain-apps
         run: npm install
-      - name: App Test Build
+      - name: App Lint Check
         working-directory: ./apps/build-onchain-apps
-        # When fails, please check your build
-        run: | 
-          cp .env.local.default .env.local
-          npm run build
+        # When fails, please run "npm run lint" to your code
+        run: npm run lint
+      - name: App Test Check
+        working-directory: ./apps/build-onchain-apps
+        # When fails, please check your tests
+        run: npm run test
