--- a/package.json
+++ b/package.json
@@ -38,16 +38,11 @@
     "@types/tar": "4.0.3",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
-    "@vitest/coverage-v8": "~0.32.0",
-    "@vitest/ui": "~0.32.0",
     "eslint": "~8.46.0",
     "eslint-config-prettier": "^9.0.0",
     "nx": "^17.1.2",
     "prettier": "^2.6.2",
-    "typescript": "~5.3.3",
-    "verdaccio": "^5.27.0",
-    "vite": "~4.3.9",
-    "vitest": "~0.32.0"
+    "typescript": "~5.3.3"
   },
   "publishConfig": {
     "access": "public",
