feat: Adding UX for signature mint

--- a/apps/build-onchain-apps/contracts/.env.example
+++ b/apps/build-onchain-apps/contracts/.env.example
@@ -1,5 +1,5 @@
 PRIVATE_KEY=
 BLOCK_EXPLORER_API_KEY="PLACEHOLDER_STRING_BASE_GOERLI_DOESNT_REQUIRE_API_KEY"
-RPC_URL="https://goerli.base.org"
-NETWORK="base_goerli"
+RPC_URL="https://sepolia.base.org"
+NETWORK="base_sepolia"
 SIGNATURE_MINT_SIGNER=
