--- a/apps/build-onchain-apps/package.json
+++ b/apps/build-onchain-apps/package.json
@@ -22,10 +22,12 @@
     "@coinbase/wallet-sdk": "^3.7.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@rainbow-me/rainbowkit": "1.3.1",
+    "abitype": "^0.10.3",
     "clsx": "^2.1.0",
     "next": "13.5.6",
     "next-pwa": "5.6.0",
     "perfume.js": "9.2.0",
+    "prettier-plugin-solidity": "^1.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-remove-scroll": "^2.5.7",
@@ -55,7 +57,6 @@
     "@typescript-eslint/type-utils": "^5.54.1",
     "@typescript-eslint/types": "^5.54.1",
     "@typescript-eslint/utils": "^5.54.1",
-    "abitype": "^0.10.3",
     "autoprefixer": "^10.4.16",
     "babel-jest": "^29.7.0",
     "eslint": "^8.27.0",
