chore: Optimize Contracts (#227)
Co-authored-by: Sneh Koul <sneh.koul@coinbase.com>

--- a/apps/build-onchain-apps/contracts/.env.example
+++ b/apps/build-onchain-apps/contracts/.env.example
@@ -2,3 +2,4 @@ PRIVATE_KEY=
 RPC_URL="https://sepolia.base.org"
 NETWORK="base_sepolia"
 SIGNATURE_MINT_SIGNER=
+BLOCK_EXPLORER_API_KEY="GET_API_KEY_FROM_THE_EXPLORER"
