--- a/apps/build-onchain-apps/contracts/foundry.toml
+++ b/apps/build-onchain-apps/contracts/foundry.toml
@@ -3,9 +3,12 @@ src = "src"
 out = "out"
 libs = ["lib"]
 fs_permissions = [{ access = "read", path = "./"}]
+solc="0.8.23"
 
 [rpc_endpoints]
 "${NETWORK}"="${RPC_URl}"
 
+[etherscan]
+"${NETWORK}"={key="${BLOCK_EXPLORER_API_KEY}"}
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
