--- a/project.json
+++ b/project.json
@@ -20,6 +20,13 @@
       "options": {
         "lintFilePatterns": ["./src/**/*.ts", "./package.json"]
       }
+    },
+    "typecheck": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": ["tsc -p tsconfig.lib.json --noEmit"],
+        "forwardAllArgs": false
+      }
     }
   },
   "tags": []
